<resources>
    <string name="app_name">Spvac-Farmacia</string>

    <!--    Recursos strings login-->
    <string name="msj_inicio_login">¡Bienvenido!</string>
    <string name="hint_correo">Correo electronico</string>
    <string name="hint_contrasenia">Contraseña</string>
    <string name="sub_msj_inicio_login">Inicia sesion para empezar a trabajar</string>
    <string name="txv_msj_inicio_login">¿Has Olvidado Tu Contraseña?</string>
    <string name="btn_msj_inicio_login">Acceder</string>

    <!-- Recursos pantalla de sucursal -->
    <string name="sub_msj_sucursal">¿En que sucursal te encuentras?</string>
    <string-array name="sucursal_array">
        <item>El 45</item>
        <item>Campo 2</item>
        <item>Campo 3</item>
        <item>Campo 4</item>
    </string-array>
    <string name="title_activity_navi_drawer">navi_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>